--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         <!-- Quote -->
         <div class="quote-text">
             <i class="fas fa-quote-left"></i>
-            <span id="quote">This is the quote. Epic.</span>
+            <span id="quote"></span>
         </div>
         <!-- Author -->
         <div class="quote-author">
-            <span id="author">Yo Mensch</span>
+            <span id="author"></span>
         </div>
         <!-- button -->
         <div class="button-container">
@@ -32,6 +32,7 @@
     </div>
 
     <!-- ein script -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="script.js"></script>
 </body>
 
