added loading animations

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
             <button id="new-quote"><i class="fas fa-sync-alt"></i> New quote</button>
         </div>
     </div>
-
+    <!-- Loader -->
+    <div class="loader" id="loader"></div>
     <!-- ein script -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="script.js"></script>
